--- a/flowblade-trunk/Flowblade/res/css2/sass/_common.scss
+++ b/flowblade-trunk/Flowblade/res/css2/sass/_common.scss
@@ -1788,6 +1788,8 @@ notebook {
             @else { margin-top: -1px; }
           }
 
+          &:checked { box-shadow: none; }
+          
           // tab border radius
           @if $_pos==top { border-radius: 0 0 0 0; }
           @else if $_pos==bottom { border-radius: 0 0 0 0; }
